--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "my-profile",
-  "homepage": "https://pkkk19.github.io/pkkk19",
+  "homepage": "prabeshkumarshrestha.netlify.app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
